<resources>
    <string name="app_name">TraficHAck</string>
    <string name="action_settings">Settings</string>

    <string name="Title">Aquinno</string>
    <string name="Login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="SignUp">Sign Up</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="register">Register</string>
    <string name="Forgot">Forgot Password?</string>
    <string name="info">We just need your registered Email id to send you password reset instructions</string>
    <string name="reset_pass">Reset Password</string>
    <string name="back">Go Back</string>

    <string-array name="locationS">
        <item>"Select"</item>
        <item>"Uppal"</item>
        <item>"L.B.Nagar"</item>
        <item>"Dilsu1knagar"</item>
        <item>"Habsiguda"</item>
        <item>"ECIL"</item>
        <item>"Nacharam"</item>
        <item>"Ghatkesar"</item>
    </string-array>

    <string-array name="statusS">
        <item>"Select"</item>
        <item>"Very Heavy"</item>
        <item>"Heavy"</item>
        <item>"Normal"</item>
        <item>"Free"</item>
    </string-array>

</resources>
