<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/grad_style">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textSize="30sp"
            app:fontFamily="sans-serif-medium"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_icon"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:id="@+id/linear_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_login"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:textColor="#ffffff"/>

            <EditText
                android:id="@+id/email_login"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/edit_style"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:textColor="#ffffff"
                app:fontFamily="sans-serif-medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                app:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:textColor="#ffffff"/>

            <EditText
                android:id="@+id/password_login"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_style"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="15sp"
                android:textColor="#ffffff"
                app:fontFamily="sans-serif-medium"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_login"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_style"
            android:text="@string/Login"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:visibility="gone"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style2"
            android:text="@string/SignUp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium"/>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style2"
            android:text="@string/forgotpass"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium"/>

    </RelativeLayout>

</RelativeLayout>